# AnomalyDetection2026

./: .dockerignore  .gitignore  ARCHITECTURE.md  Dockerfile  Makefile  README.md  compose.yaml  mlflow.db  pyproject.toml
.github/workflows/: ci.yml
cache/: README.md
cache/models/: meta.json
cache/models/v1/: 1.pkl  10.pkl  11.pkl  12.pkl  13.pkl  14.pkl  15.pkl  16.pkl  17.pkl  18.pkl  19.pkl  2.pkl  20.pkl  21.pkl  22.pkl  23.pkl  24.pkl  25.pkl  26.pkl  27.pkl  28.pkl  29.pkl  3.pkl  4.pkl  5.pkl  6.pkl  7.pkl  8.pkl  9.pkl  meta.json
cache/models/v2/: 10.pkl  12.pkl  15.pkl  16.pkl  20.pkl  28.pkl  4.pkl  6.pkl  7.pkl  meta.json
data/: README.md  manifest.json
data/raw/: README.md
data/raw/labels/: README.md
labels/: README.md
mlruns/1/models/m-10406deb9b1f468f9ba229b975f97356/artifacts/: MLmodel  python_model.pkl
mlruns/1/models/m-10406deb9b1f468f9ba229b975f97356/artifacts/artifacts/v1/: 1.pkl  10.pkl  11.pkl  12.pkl  13.pkl  14.pkl  15.pkl  16.pkl  17.pkl  18.pkl  19.pkl  2.pkl  20.pkl  21.pkl  22.pkl  23.pkl  24.pkl  25.pkl  26.pkl  27.pkl  28.pkl  29.pkl  3.pkl  4.pkl  5.pkl  6.pkl  7.pkl  8.pkl  9.pkl  meta.json
mlruns/1/models/m-3644512a991d4b8592f060d8919ae65c/artifacts/: MLmodel
mlruns/1/models/m-3644512a991d4b8592f060d8919ae65c/artifacts/artifacts/v1/: 1.pkl  10.pkl  11.pkl  12.pkl  13.pkl  14.pkl  15.pkl  16.pkl  17.pkl  18.pkl  19.pkl  2.pkl  20.pkl  21.pkl  22.pkl  23.pkl  24.pkl  25.pkl  26.pkl  27.pkl  28.pkl  29.pkl  3.pkl  4.pkl  5.pkl  6.pkl  7.pkl  8.pkl  9.pkl  meta.json
mlruns/1/models/m-6c2602538aa244dd9e6fac4ab25eb9ad/artifacts/: MLmodel  serving_input_example.json
mlruns/1/models/m-6c2602538aa244dd9e6fac4ab25eb9ad/artifacts/artifacts/v1/: 1.pkl  10.pkl  11.pkl  13.pkl  14.pkl  16.pkl  17.pkl  19.pkl  20.pkl  21.pkl  22.pkl  23.pkl  (+13 more)
mlruns/1/models/m-992b448dfc41482e8d612250d6215c32/artifacts/: MLmodel  conda.yaml  python_model.pkl
mlruns/1/models/m-aecd4c58cd2c4584986d5435733b5a74/artifacts/: MLmodel  input_example.json
mlruns/1/models/m-e3f98fc2681c4d31aa7df90513ff2750/artifacts/: MLmodel  conda.yaml  pyproject.toml  requirements.txt
mlruns/1/models/m-e3f98fc2681c4d31aa7df90513ff2750/artifacts/artifacts/v2/: 11.pkl  17.pkl  23.pkl  26.pkl  9.pkl
mlruns/1/models/m-fd1a9329f86442ee99104656cfb89d66/artifacts/: MLmodel  conda.yaml  python_env.yaml
notebooks/: 0.01-acp-exploratory-data-analysis.ipynb  01_eda.ipynb  02_model_debugging.ipynb  1.01-acp-model-debugging.ipynb  1.02-acp-model-debugging.ipynb  3.01-acp-model-debugging.ipynb
notebooks/assets/alert_hierarchy/: alert-hierarchy-demo.html
src/analysis/: __init__.py  mlflow_experiments.py  model_cache.py
src/analysis/api_replay/: __init__.py  batching.py  evaluation.py  simulation.py
src/analysis/evaluation/: __init__.py  batching.py  evaluation.py  incidents.py  reporting.py  simulation.py
src/analysis/mlflow/: deploy_demo.py  mlflow_experiments.py  mlflow_registry.py  model_cache.py
src/analysis/plotting/: __init__.py  reporting.py  style.py
src/analysis/plotting/eda/: __init__.py  rms_widget.py  scenario_inspector.py
src/analysis/plotting/scoring/: __init__.py  _colors.py  _helpers.py  _hierarchy_demo.py  _layout.py  _replay_rendering.py  _scoring_figure.py  _sigmoid_math.py  api_replay_widget.py  calibration_widget.py  distribution_widget.py  offline_replay_widget.py  scoring_widget.py
src/anomaly_detection/: __init__.py
src/anomaly_detection/api/: __init__.py  main.py
src/anomaly_detection/model/: __init__.py
src/anomaly_detection/model/baseline/: __init__.py  alert_engine.py  detector.py  params.py
src/anomaly_detection/model/grouped_residual/: __init__.py  detector.py  params.py  preprocessing.py  scoring.py
src/anomaly_detection/model/grouped_residual/alerting/: __init__.py  _utils.py  engine.py  pending_events.py
src/anomaly_detection/model/grouped_residual/hyperparameters/: norm_model_hyperparams.yaml
src/anomaly_detection/model/shared/: __init__.py  config.py  interface.py  scenario_groups.py
src/anomaly_detection/registry/: _model_from_code.py  bundle.py
src/offline_analysis/: __init__.py
src/offline_analysis/evaluation/: __init__.py  batching.py  diagnostics.py  incidents.py  metrics.py  report_tables.py  simulation.py
src/offline_analysis/plotting/: __init__.py  reporting.py
src/offline_analysis/plotting/eda/: rms_widget.py
src/offline_analysis/plotting/scoring/: __init__.py  _colors.py  _helpers.py  _layout.py  _replay_rendering.py  _scoring_figure.py  _scoring_payload.py  calibration_widget.py  offline_replay_widget.py  scoring_widget.py
src/pipelines/: __init__.py  deploy_demo.py  mlflow_experiments.py  mlflow_registry.py  model_cache.py
src/sample_processing/: __init__.py
src/sample_processing/api/: main.py
src/sample_processing/hyperparameters/: alert_hyperparams.yaml
src/sample_processing/model/: alert_engine.py  anomaly_model.py  interface.py  scenario_groups.py  sensor_model.py
src/sample_processing/model/alerting/: __init__.py  _utils.py  group_logic.py
src/sample_processing/model/baseline/: alert_engine.py  anomaly_model.py  interface.py
src/sample_processing/model/current/: anomaly_model.py  interface.py  normalization.py  preprocessing.py  sensor_model.py
src/sample_processing/model/current/alerting/: engine.py  group_logic.py  priority_queue.py
src/sample_processing/model/current/hyperparameters/: alert_hyperparams.yaml
src/sample_processing/serving/: registry.py
src/tests/: conftest.py  test_contracts.py  test_evaluation.py  test_model.py  test_performance.py  test_serving.py
(+45 files in other folders)
