[project]
name = "sample_processing"
version = "0.1.0"
description = "Anomaly detection API"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi==0.115.0",
    "uvicorn==0.30.6",
    "numpy==1.26.4",
    "pydantic==2.9.2",
    "httpx>=0.27.0",
    "pandas>=2.0.0",
    "pyarrow>=14.0.0",
    "pyyaml>=6.0",
    "pytest>=8.0.0",
    "scikit-learn>=1.3.0",
    "scipy>=1.11.0",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["src/tests"]

[build-system]
requires = ["uv_build>=0.10.9,<0.11.0"]
build-backend = "uv_build"