[project]
name = "sample_processing"
version = "0.1.0"
description = "Industrial Sensor Anomaly Detection API"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi==0.115.0",
    "uvicorn==0.30.6",
    "numpy==1.26.4",
    "pydantic==2.9.2",
    "httpx>=0.27.0",
    "pandas>=2.0.0",
    "pyarrow>=14.0.0",
    "pyyaml>=6.0",
    "pytest>=8.0.0",
]

[project.optional-dependencies]
# Analysis-package + notebook stack. Not needed by the API server or the test
# suite (neither imports `analysis`), so it stays out of the lean runtime image.
# Install standalone with:  uv sync --extra notebooks
# Run notebooks in Docker with:  make notebooks
notebooks = [
    "matplotlib>=3.7",
    "seaborn>=0.13",
    "mlflow>=2.9",
    "ipywidgets>=8.0",
    "ipython>=8.0",
    "ipykernel>=6.25",
    "jupyterlab>=4.0",
]

[dependency-groups]
# Local dev tooling. Installed by `uv sync` (default), excluded from the Docker
# image via `uv sync --no-dev`.
dev = [
    "ruff>=0.15",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["src/tests"]

[build-system]
requires = ["uv_build>=0.10.9,<0.11.0"]
build-backend = "uv_build"