[project]
name = "sample_processing"
version = "0.1.0"
description = "Industrial Sensor Anomaly Detection API"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    # Runtime API dependencies. Keep this list deployment-focused: packages used
    # only by tests, notebooks, analysis, or local tooling belong below.
    "fastapi==0.115.0",
    "uvicorn==0.30.6",
    "numpy==1.26.4",
    "pydantic==2.9.2",
    # sample_processing imports pandas in the model path, so it remains runtime.
    "pandas>=2.0.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
# Notebook and offline analysis stack. This is installed only by the Dockerfile
# `notebooks` target or by local `uv sync --extra notebooks`.
notebooks = [
    "matplotlib>=3.7",
    "seaborn>=0.13",
    "mlflow>=2.9",
    "pyarrow>=14.0.0",
    "ipywidgets>=8.0",
    "ipython>=8.0",
    "ipykernel>=6.25",
    "jupyterlab>=4.0",
]

[dependency-groups]
# Local test tooling. Docker's `test` and `inference-test` services install this
# group with `uv sync --group test`; the API image does not.
test = [
    "httpx>=0.27.0",
    "pytest>=8.0.0",
    "pyarrow>=14.0.0",
]

# Local developer tooling. Installed by plain `uv sync` for developer
# environments and excluded from Docker images with `uv sync --no-dev`.
dev = [
    "ruff>=0.15",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["src/tests"]

[build-system]
requires = ["uv_build>=0.10.9,<0.11.0"]
build-backend = "uv_build"