[project]
name = "anomaly_detection"
version = "0.1.0"
description = "Industrial Sensor Anomaly Detection API"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    # Runtime API dependencies. Keep this list deployment-focused: packages used
    # only by tests, notebooks, analysis, or local tooling belong below.
    "fastapi==0.115.0",
    "uvicorn==0.30.6",
    "numpy==1.26.4",
    "pydantic==2.9.2",
    # anomaly_detection imports pandas in the model path, so it remains runtime.
    "pandas>=2.0.0",
    "pyyaml>=6.0",
    "mlflow>=2.14",
    "prometheus-client>=0.20",
]

[project.optional-dependencies]
# Notebook and offline analysis stack. This is installed only by the Dockerfile
# `notebooks` target or by local `uv sync --extra notebooks`.
notebooks = [
    "matplotlib>=3.7",
    "seaborn>=0.13",
    "pyarrow>=14.0.0",
    "ipywidgets>=8.0",
    "ipython>=8.0",
    "ipykernel>=6.25",
    "jupyterlab>=4.0",
]

[dependency-groups]
# Local test tooling. Docker's `test` and `inference-test` services install this
# group with `uv sync --group test`; the API image does not.
test = [
    "httpx>=0.27.0",
    "pytest>=8.0.0",
    "pyarrow>=14.0.0",
]

# Local developer tooling. Installed by plain `uv sync` for developer
# environments and excluded from Docker images with `uv sync --no-dev`.
dev = [
    "ruff>=0.15",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["src/tests"]
# These are benign deprecation/user warnings emitted by third-party deps
# (protobuf via mlflow, starlette's test client, mlflow's pydantic models), not
# by our code. Silenced so genuine warnings from anomaly_detection stay visible.
# Re-check this list on dependency bumps.
filterwarnings = [
    'ignore:Type google.protobuf',
    'ignore:Using `httpx` with `starlette.testclient`',
    'ignore:Field "model_name" in PromptModelConfig has conflict',
]

[tool.ruff]
target-version = "py310"
line-length = 100
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ["E501"]  # line length is a formatting concern, not gated here

[build-system]
requires = ["uv_build>=0.10.9,<0.12.0"]
build-backend = "uv_build"